--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,12 +14,12 @@
 	</welcome-file-list>
 
 	<listener>
-		<listener-class>rcms.utilities.daqaggregator.servlets.ServletListener</listener-class>
+		<listener-class>rcms.utilities.daqexpert.servlets.ServletListener</listener-class>
 	</listener>
 
 	<servlet>
 		<servlet-name>DashboardServlet</servlet-name>
-		<servlet-class>rcms.utilities.daqaggregator.servlets.DashboardServlet</servlet-class>
+		<servlet-class>rcms.utilities.daqexpert.servlets.DashboardServlet</servlet-class>
 	</servlet>
 
 	<servlet-mapping>
@@ -29,7 +29,7 @@
 
 	<servlet>
 		<servlet-name>API</servlet-name>
-		<servlet-class>rcms.utilities.daqaggregator.servlets.API</servlet-class>
+		<servlet-class>rcms.utilities.daqexpert.servlets.API</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>API</servlet-name>
@@ -38,7 +38,7 @@
 
 	<servlet>
 		<servlet-name>ReasonsAPI</servlet-name>
-		<servlet-class>rcms.utilities.daqaggregator.servlets.ReasonsAPI</servlet-class>
+		<servlet-class>rcms.utilities.daqexpert.servlets.ReasonsAPI</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>ReasonsAPI</servlet-name>
@@ -47,7 +47,7 @@
 
 	<servlet>
 		<servlet-name>RawAPI</servlet-name>
-		<servlet-class>rcms.utilities.daqaggregator.servlets.RawAPI</servlet-class>
+		<servlet-class>rcms.utilities.daqexpert.servlets.RawAPI</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>RawAPI</servlet-name>
@@ -55,7 +55,7 @@
 	</servlet-mapping>
 	<servlet>
 		<servlet-name>SnapshotAPI</servlet-name>
-		<servlet-class>rcms.utilities.daqaggregator.servlets.SnapshotAPI</servlet-class>
+		<servlet-class>rcms.utilities.daqexpert.servlets.SnapshotAPI</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>SnapshotAPI</servlet-name>
@@ -63,7 +63,7 @@
 	</servlet-mapping>
 		<servlet>
 		<servlet-name>RaportAPI</servlet-name>
-		<servlet-class>rcms.utilities.daqaggregator.servlets.RaportAPI</servlet-class>
+		<servlet-class>rcms.utilities.daqexpert.servlets.RaportAPI</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>RaportAPI</servlet-name>
