--- a/pom.xml
+++ b/pom.xml
@@ -24,11 +24,10 @@
 			<version>1.2.17</version>
 		</dependency>
 
-
 		<dependency>
 			<groupId>ch.cern</groupId>
 			<artifactId>DAQAggregator</artifactId>
-			<version>1.3.1</version>
+			<version>1.4.2.20160915</version>
 		</dependency>
 
 		<!-- JSP -->
@@ -79,6 +78,19 @@
 			<groupId>commons-configuration</groupId>
 			<artifactId>commons-configuration</artifactId>
 			<version>1.6</version>
+		</dependency>
+		
+				<!-- https://mvnrepository.com/artifact/org.jmock/jmock-junit4 -->
+		<dependency>
+			<groupId>org.jmock</groupId>
+			<artifactId>jmock-junit4</artifactId>
+			<version>2.8.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.4</version>
 		</dependency>
 
 	</dependencies>
