feat(): past read offset moved to properties file

--- a/DAQExpert-example.properties
+++ b/DAQExpert-example.properties
@@ -1,3 +1,7 @@
-snapshots=/tmp/snapshots-dev/
-nm.url=http://localhost:18081/nm/
-nm.api=http://localhost:18081/nm/rest/events/
+snapshots=/tmp/snapshots/
+nm.dashboard=http://localhost:18081/nm/dashboard
+nm.notifications=http://localhost:18081/nm/event_occurrences
+nm.api.create=http://localhost:18081/nm/rest/events/
+nm.api.close=http://localhost:18081/nm/rest/closeEvent/
+landing=http://dev-daq-expert.cern.ch/
+offset=3600000
