--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,7 +1,7 @@
 snapshots=/tmp/snapshots/
+landing=http://daq-expert.cern.ch/
 nm.dashboard=http://localhost:18081/nm/dashboard
 nm.notifications=http://localhost:18081/nm/event_occurrences
 nm.api.create=http://localhost:18081/nm/rest/events/
 nm.api.close=http://localhost:18081/nm/rest/closeEvent/
-landing=http://dev-daq-expert.cern.ch/
-offset=3600000
+nm.offset=3600000
