--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -5,3 +5,4 @@ nm.notifications=http://localhost:18081/nm/event_occurrences
 nm.api.create=http://localhost:18081/nm/rest/events/
 nm.api.close=http://localhost:18081/nm/rest/closeEvent/
 nm.offset=3600000
+experimental=/tmp/experimental/
