feat(): experimental api, get snapshots for processing on demand

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -56,7 +56,7 @@
 		<servlet-name>SnapshotAPI</servlet-name>
 		<url-pattern>/snapshot</url-pattern>
 	</servlet-mapping>
-		<servlet>
+	<servlet>
 		<servlet-name>RaportAPI</servlet-name>
 		<servlet-class>rcms.utilities.daqexpert.servlets.RaportAPI</servlet-class>
 	</servlet>
@@ -64,7 +64,14 @@
 		<servlet-name>RaportAPI</servlet-name>
 		<url-pattern>/raport</url-pattern>
 	</servlet-mapping>
-
+	<servlet>
+		<servlet-name>ExperimentApi</servlet-name>
+		<servlet-class>rcms.utilities.daqexpert.servlets.ExperimentApi</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ExperimentApi</servlet-name>
+		<url-pattern>/experiment</url-pattern>
+	</servlet-mapping>
 
 
 </web-app>
