feat(): script can be chosen and past results can be loaded

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -72,6 +72,13 @@
 		<servlet-name>ExperimentApi</servlet-name>
 		<url-pattern>/experiment</url-pattern>
 	</servlet-mapping>
-
+	<servlet>
+		<servlet-name>ScriptsExperimentalAPI</servlet-name>
+		<servlet-class>rcms.utilities.daqexpert.servlets.ScriptsExperimentalAPI</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ScriptsExperimentalAPI</servlet-name>
+		<url-pattern>/scripts</url-pattern>
+	</servlet-mapping>
 
 </web-app>
