--- a/pom.xml
+++ b/pom.xml
@@ -98,9 +98,10 @@
 
 		<dependency>
 			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-			<version>3.4</version>
+             		<artifactId>commons-collections4</artifactId>
+             		<version>4.0</version>
 		</dependency>
+		
 
 		<!-- https://mvnrepository.com/artifact/org.codehaus.groovy/groovy-all -->
 		<dependency>
