--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ch.cern</groupId>
 	<artifactId>DAQExpert</artifactId>
-	<version>1.4.14.20170131</version>
+	<version>1.4.15</version>
 
 	<name>DAQExpert</name>
 
