fix(): version detection problem fix

--- a/pom.xml
+++ b/pom.xml
@@ -176,6 +176,7 @@
 							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
 						</manifest>
 					</archive>
+					<archiveClasses>true</archiveClasses>
 				</configuration>
 			</plugin>
 		</plugins>
