--- a/pom.xml
+++ b/pom.xml
@@ -173,6 +173,14 @@
 			<version>1.0.4</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.3</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
