--- a/pom.xml
+++ b/pom.xml
@@ -150,6 +150,7 @@
 			<groupId>org.jmock</groupId>
 			<artifactId>jmock-junit4</artifactId>
 			<version>2.8.2</version>
+			<scope>test</scope>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/javax.websocket/javax.websocket-api -->
@@ -183,6 +184,7 @@
 			<groupId>org.mock-server</groupId>
 			<artifactId>mockserver-netty</artifactId>
 			<version>3.10.4</version>
+			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
