--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
 		<dependency>
 			<groupId>ch.cern</groupId>
 			<artifactId>DAQAggregator</artifactId>
-			<version>1.5.8pre</version>
+			<version>1.6.0</version>
 		</dependency>
 
 		<!-- JSP -->
