fix(): connection pool configured

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,7 +1,8 @@
 
 # Define the root logger with appender file
 log4j.rootLogger = INFO, console
-#log4j.category.rcms.utilities.daqexpert.processing=DEBUG
+log4j.logger.org.hibernate=ERROR
+log4j.logger.com.mchange=ERROR
 #log4j.category.rcms.utilities.daqexpert.reasoning.processing=TRACE
 
 
