test(): add integration settings

--- a/src/test/resources/integration.properties
+++ b/src/test/resources/integration.properties
@@ -5,6 +5,7 @@ nm.dashboard=http://localhost:18081/nm/dashboard.jsp
 nm.archive=http://localhost:18081/nm/archive
 nm.api=http://localhost:18081/nm/rest/events/
 landing=http://dev-daq-expert.cern.ch/
+flashlist.dir=./
 demo=false
 
 #
