test(): add settings tIT tests

--- a/src/test/resources/integration.properties
+++ b/src/test/resources/integration.properties
@@ -5,6 +5,9 @@ nm.dashboard=http://localhost:18081/nm/dashboard.jsp
 nm.archive=http://localhost:18081/nm/archive
 nm.api=http://localhost:18081/nm/rest/events/
 landing=http://dev-daq-expert.cern.ch/
+daqview.link=http://daq-expert.cms/daq2view-react/index.html
+daqview.setup=cdaq
+
 demo=false
 
 #
