--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
 		<dependency>
 			<groupId>ch.cern</groupId>
 			<artifactId>DAQAggregator</artifactId>
-			<version>1.14.0.SNAPSHOT.serialize</version>
+			<version>1.16.0</version>
 		</dependency>
 
 		<!-- JSP -->
