feat(): add LM LengthyFixingSoftError

--- a/src/test/resources/integration.properties
+++ b/src/test/resources/integration.properties
@@ -51,6 +51,9 @@ expert.logic.continoussofterror.threshold.period = 600000
 # period to keep the result on - 15 sec
 expert.logic.continoussofterror.threshold.keep = 15000
 
+# theshold for fixing soft error warning - 30 sec
+expert.logic.lenghtyfixingsofterror.threshold.period = 30000
+
 # Experimental mode
 experimental=/home/mgladki/experimental/
 
