monitoring trigger rate

--- a/src/test/resources/integration.properties
+++ b/src/test/resources/integration.properties
@@ -34,6 +34,10 @@ processing.end=2016-11-30T14:00:30Z
 expert.logic.deadtime.threshold.fed=5
 expert.logic.deadtime.threshold.partition=5
 expert.logic.deadtime.threshold.total=5
+
+expert.l1.trigger.min=0
+expert.l1.trigger.max=150000
+
 expert.l1.rate.min=50000
 expert.l1.rate.max=100000
 
