--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,14 @@
 				<enabled>false</enabled>
 			</snapshots>
 		</repository>
+		
+		<repository>
+			<id>ext-release-local</id>
+			<url>http://dev-daq-expert.cern.ch/artifactory/ext-release-local</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
 	</repositories>
 
 	<properties>
@@ -174,16 +182,28 @@
 			<scope>test</scope>
 		</dependency>
 
-
-
-
 		<!-- Testing using mocks -->
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>2.8.47</version>
+			<version>1.9.5</version>
 			<scope>test</scope>
 		</dependency>
+
+<dependency>
+    <groupId>org.hamcrest</groupId>
+    <artifactId>hamcrest-core</artifactId>
+    <version>1.3</version>
+    <scope>test</scope>
+  </dependency>
+  <dependency>
+    <groupId>org.hamcrest</groupId>
+    <artifactId>hamcrest-library</artifactId>
+    <version>1.3</version>
+    <scope>test</scope>
+  </dependency>
+
+
 
 		<!-- https://mvnrepository.com/artifact/org.jmock/jmock-junit4 -->
 		<dependency>
@@ -210,8 +230,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.3</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 			<plugin>
