changed (expected) unit of parameter expert.logic.cloudfunumber.holdoff.period from seconds to milliseconds (including in integration test property file and test cases)

--- a/src/test/resources/integration.properties
+++ b/src/test/resources/integration.properties
@@ -56,7 +56,7 @@ expert.logic.lenghtyfixingsofterror.threshold.period = 30000
 
 
 expert.logic.cloudfunumber.threshold.total.fraction = 0.03
-expert.logic.cloudfunumber.holdoff.period = 1800
+expert.logic.cloudfunumber.holdoff.period = 1800000
 
 # Experimental mode
 experimental=/home/mgladki/experimental/
