--- a/src/test/resources/integration.properties
+++ b/src/test/resources/integration.properties
@@ -39,6 +39,7 @@ processing.end=2000-01-01T00:00:30Z
 expert.logic.deadtime.threshold.fed=5
 expert.logic.deadtime.threshold.partition=5
 expert.logic.deadtime.threshold.total=5
+expert.logic.deadtime.threshold.tts=2
 expert.l1.rate.min=50000
 expert.l1.rate.max=100000
 
