--- a/src/test/resources/integration.properties
+++ b/src/test/resources/integration.properties
@@ -59,6 +59,10 @@ expert.logic.lenghtyfixingsofterror.threshold.period = 30000
 expert.logic.cloudfunumber.threshold.total.fraction = 0.03
 expert.logic.cloudfunumber.holdoff.period = 1800000
 
+expert.logic.deadtimeanalysis.fed.backpressure.threshold = 2
+expert.logic.backpressurefromhlt.bus.enabled.threshold.fraction = 0.3
+expert.logic.evm.requests.few.max = 100
+
 # Experimental mode
 experimental=/home/mgladki/experimental/
 
