feat(): add bandwidth check plus tests

--- a/src/test/resources/integration.properties
+++ b/src/test/resources/integration.properties
@@ -46,6 +46,9 @@ expert.l1.rate.max=100000
 expert.hlt.rate.min=80
 expert.hlt.rate.max=280
 
+expert.hlt.output.bandwidth.high=4000
+expert.hlt.output.bandwidth.extreme=6000
+
 expert.logic.continoussofterror.threshold.count = 3
 # period to repeat of 10 mins
 expert.logic.continoussofterror.threshold.period = 600000
