added threshold parameters for high/very high TCDS trigger input rates to integration.properties

--- a/src/test/resources/integration.properties
+++ b/src/test/resources/integration.properties
@@ -43,6 +43,9 @@ expert.logic.deadtime.threshold.tts=2
 expert.l1.rate.min=50000
 expert.l1.rate.max=100000
 
+expert.tcds.input.rate.high=100000
+expert.tcds.input.rate.veryhigh=200000
+
 expert.hlt.rate.min=80
 expert.hlt.rate.max=280
 
