feat(): add check for deadtime contribution from retri

--- a/src/test/resources/integration.properties
+++ b/src/test/resources/integration.properties
@@ -40,6 +40,8 @@ expert.logic.deadtime.threshold.fed=5
 expert.logic.deadtime.threshold.partition=5
 expert.logic.deadtime.threshold.total=5
 expert.logic.deadtime.threshold.tts=2
+expert.logic.deadtime.threshold.retri=1
+
 expert.l1.rate.min=50000
 expert.l1.rate.max=100000
 
