fix(): removed backpressure addition

--- a/src/test/resources/integration.properties
+++ b/src/test/resources/integration.properties
@@ -66,6 +66,13 @@ expert.logic.deadtimeanalysis.fed.backpressure.threshold = 2
 expert.logic.backpressurefromhlt.bus.enabled.threshold.fraction = 0.3
 expert.logic.evm.requests.few.max = 100
 
+
+
+expert.cmssw.crashes.increase = 20
+expert.cmssw.crashes.timewindow.seconds = 20
+expert.cmssw.crashes.holdoff.seconds = 30
+
+
 # Experimental mode
 experimental=/home/mgladki/experimental/
 
