--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
 	</properties>
 
 	<dependencies>
+
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
@@ -128,6 +129,13 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
 			<version>${hibernate.version}</version>
+
+			<exclusions>
+				<exclusion>
+					<groupId>javassist</groupId>
+					<artifactId>javassist</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<dependency>
@@ -191,6 +199,7 @@
 			<artifactId>mockserver-netty</artifactId>
 			<version>3.10.4</version>
 			<scope>test</scope>
+
 		</dependency>
 
 		<!-- Testing using mocks -->
@@ -215,6 +224,12 @@
 			<version>1.2.140</version>
 		</dependency>
 
+
+		<dependency>
+			<groupId>org.javassist</groupId>
+			<artifactId>javassist</artifactId>
+			<version>3.21.0-GA</version>
+		</dependency>
 
 
 	</dependencies>
@@ -287,12 +302,14 @@
 				<groupId>org.mock-server</groupId>
 				<artifactId>mockserver-maven-plugin</artifactId>
 				<version>3.10.8</version>
+
 				<configuration>
 					<serverPort>1080</serverPort>
 					<proxyPort>1090</proxyPort>
 					<logLevel>DEBUG</logLevel>
 					<initializationClass>org.mockserver.maven.ExampleInitializationClass</initializationClass>
 				</configuration>
+
 				<executions>
 					<execution>
 						<id>process-test-classes</id>
