--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ch.cern</groupId>
 	<artifactId>DAQExpert</artifactId>
-	<version>2.9.15</version>
+	<version>2.9.9</version>
 
 	<name>DAQExpert</name>
 
@@ -53,7 +53,7 @@
 		<dependency>
 			<groupId>ch.cern</groupId>
 			<artifactId>DAQAggregator</artifactId>
-			<version>1.17.6</version>
+			<version>1.17.7</version>
 		</dependency>
 
 		<!-- JSP -->
@@ -128,6 +128,13 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
 			<version>${hibernate.version}</version>
+
+			<exclusions>
+				<exclusion>
+					<groupId>javassist</groupId>
+					<artifactId>javassist</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<dependency>
@@ -216,6 +223,12 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>org.javassist</groupId>
+			<artifactId>javassist</artifactId>
+			<version>3.21.0-GA</version>
+		</dependency>
+
 
 	</dependencies>
 
@@ -286,7 +299,7 @@
 			<plugin>
 				<groupId>org.mock-server</groupId>
 				<artifactId>mockserver-maven-plugin</artifactId>
-				<version>3.10.4</version>
+				<version>3.10.8</version>
 				<configuration>
 					<serverPort>1080</serverPort>
 					<proxyPort>1090</proxyPort>
