--- a/src/test/resources/integration.properties
+++ b/src/test/resources/integration.properties
@@ -76,6 +76,7 @@ expert.logic.evm.requests.few.max = 100
 expert.cmssw.crashes.increase = 20
 expert.cmssw.crashes.timewindow.seconds = 20
 
+expert.logic.hlt.cpu.load.threshold = 0.90
 
 # Experimental mode
 experimental=/home/mgladki/experimental/
