--- a/src/test/resources/integration.properties
+++ b/src/test/resources/integration.properties
@@ -64,6 +64,8 @@ expert.logic.lenghtyfixingsofterror.threshold.period = 30000
 expert.logic.cloudfunumber.threshold.total.fraction = 0.03
 expert.logic.cloudfunumber.holdoff.period = 1800000
 
+expert.logic.norate.threshold = 0
+
 # Experimental mode
 experimental=/home/mgladki/experimental/
 
