--- a/src/test/resources/integration.properties
+++ b/src/test/resources/integration.properties
@@ -78,6 +78,8 @@ expert.cmssw.crashes.timewindow.seconds = 20
 
 expert.logic.hlt.cpu.load.threshold = 0.90
 
+expert.logic.norate.threshold = 0
+
 # Experimental mode
 experimental=/home/mgladki/experimental/
 
