feat(): initialize controller client #169

--- a/src/test/resources/integration.properties
+++ b/src/test/resources/integration.properties
@@ -8,8 +8,12 @@ landing=http://dev-daq-expert.cern.ch/
 daqview.link=http://daq-expert.cms/daq2view-react/index.html
 daqview.setup=cdaq
 
-demo=false
+demo=true
+demo.delay= 1
 
+
+controller.enabled=false
+controller.address=http://localhost:8082
 #
 # Expert run configuration
 #
