feat(): changed fixed rate to fixed delay scheduler, minor changes #169

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -2,8 +2,13 @@
 # Define the root logger with appender file
 log4j.rootLogger = INFO, console
 log4j.logger.org.hibernate=ERROR
+
+org.hibernate=ERROR
+log4j.org.hibernate=ERROR
+
 log4j.logger.com.mchange=ERROR
-#log4j.category.rcms.utilities.daqexpert.reasoning.processing=TRACE
+log4j.category.rcms.utilities.daqexpert.reasoning.processing.LogicModuleManager=OFF
+log4j.category.rcms.utilities.daqaggregator.persistence=ERROR
 
 
 # Define the file appender
