test(): suppressing gitlab logs #169

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,13 @@
 			<version>1.2.17</version>
 		</dependency>
 
+		<!-- in order to turn off the hibernate logs -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.6.1</version>
+		</dependency>
+
                 <dependency>
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest-core</artifactId>
