test(): add externalized socket configuration #169

--- a/src/test/resources/integration.properties
+++ b/src/test/resources/integration.properties
@@ -14,6 +14,7 @@ demo.delay= 1
 
 controller.enabled=false
 controller.address=http://localhost:8082
+controller.socket=http://localhost:8082/records/
 #
 # Expert run configuration
 #
