feat(): visualizing LMs' relations

--- a/pom.xml
+++ b/pom.xml
@@ -228,6 +228,12 @@
 			<version>3.21.0-GA</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.jgrapht</groupId>
+			<artifactId>jgrapht-core</artifactId>
+			<version>1.1.0</version>
+		</dependency>
+
 
 	</dependencies>
 
