fix(): introduce 2nd holdoff - self holdoff #186

--- a/src/test/resources/integration.properties
+++ b/src/test/resources/integration.properties
@@ -82,7 +82,8 @@ expert.cmssw.crashes.increase = 20
 expert.cmssw.crashes.timewindow.seconds = 20
 
 expert.logic.hlt.cpu.load.threshold = 0.90
-expert.logic.hlt.cpu.load.holdoff.period = 60000
+expert.logic.hlt.cpu.load.runongoing.holdoff.period = 60000
+expert.logic.hlt.cpu.load.self.holdoff.period = 60000
 
 expert.logic.norate.threshold = 0
 
