--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -7,8 +7,9 @@ org.hibernate=ERROR
 log4j.org.hibernate=ERROR
 
 log4j.logger.com.mchange=ERROR
-log4j.category.rcms.utilities.daqexpert.reasoning.processing.LogicModuleManager=OFF
+log4j.category.rcms.utilities.daqexpert.reasoning.processing.LogicModuleManager=ERROR
 log4j.category.rcms.utilities.daqaggregator.persistence=ERROR
+log4j.category.rcms.utilities.daqaggregator.persistence.PersistenceExplorer=ERROR
 
 
 # Define the file appender
