--- a/pom.xml
+++ b/pom.xml
@@ -251,6 +251,12 @@
 			<version>1.1.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-csv</artifactId>
+			<version>1.5</version>
+		</dependency>
+
 
 	</dependencies>
 
