feat(): per subsystem threshold conf. of lengthy fixing soft error #223

--- a/src/test/resources/integration.properties
+++ b/src/test/resources/integration.properties
@@ -67,6 +67,7 @@ expert.logic.continoussofterror.threshold.keep = 15000
 
 # theshold for fixing soft error warning - 30 sec
 expert.logic.lenghtyfixingsofterror.threshold.period = 30000
+expert.logic.lenghtyfixingsofterror.threshold.period.tracker = 60000
 
 
 expert.logic.cloudfunumber.threshold.total.fraction = 0.03
