added new configuration parameters expert.hlt.output.bandwidth.runongoing.holdoff.period and expert.hlt.output.bandwidth.self.holdoff.period (#233)

--- a/src/test/resources/integration.properties
+++ b/src/test/resources/integration.properties
@@ -59,6 +59,16 @@ expert.hlt.rate.max=280
 expert.hlt.output.bandwidth.high=4.5
 expert.hlt.output.bandwidth.extreme=6.0
 
+# these values are set to zero to make JobManagerIT.blackboxTest7()
+# work on old snapshots which fired an error condition
+# immediately
+#
+# typical values for these parameters used in production are 
+# 300000 for the runongoing holdoff period
+# 120000 for the self holdoff period
+expert.hlt.output.bandwidth.runongoing.holdoff.period=0
+expert.hlt.output.bandwidth.self.holdoff.period=0
+
 expert.logic.continoussofterror.threshold.count = 3
 # period to repeat of 10 mins
 expert.logic.continoussofterror.threshold.period = 600000
