--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -7,10 +7,14 @@ org.hibernate=ERROR
 log4j.org.hibernate=ERROR
 
 log4j.logger.com.mchange=ERROR
-log4j.category.rcms.utilities.daqexpert.reasoning.processing.LogicModuleManager=ERROR
+log4j.category.rcms.utilities.daqexpert.reasoning.processing.LogicModuleManager=OFF
 log4j.category.rcms.utilities.daqaggregator.persistence=ERROR
 log4j.category.rcms.utilities.daqaggregator.persistence.PersistenceExplorer=ERROR
-
+log4j.category.rcms.utilities.daqexpert.persistence=ERROR
+log4j.category.rcms.utilities.daqexpert.reasoning.logic=ERROR
+log4j.category.rcms.utilities.daqexpert.events=ERROR
+log4j.category.rcms.utilities.daqexpert.jobs.RecoveryRequestBuilder=ERROR
+log4j.category.rcms.utilities.daqexpert.servlets=ERROR
 
 # Define the file appender
 log4j.appender.console=org.apache.log4j.ConsoleAppender
