--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 
 # Define the root logger with appender file
-log4j.rootLogger = INFO, console
+log4j.rootLogger = INFO, rollingFile
 log4j.logger.org.hibernate=ERROR
 
 org.hibernate=ERROR
@@ -12,8 +12,11 @@ log4j.category.rcms.utilities.daqaggregator.persistence=ERROR
 log4j.category.rcms.utilities.daqaggregator.persistence.PersistenceExplorer=ERROR
 
 # Define the file appender
-log4j.appender.console=org.apache.log4j.ConsoleAppender
+log4j.appender.rollingFile=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.rollingFile.DatePattern='.'yyyy-MM-dd
+log4j.appender.rollingFile.File=${log-directory}/daqexpert.log
 
-
-log4j.appender.console.layout=org.apache.log4j.PatternLayout
-log4j.appender.console.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+log4j.appender.rollingFile.layout=org.apache.log4j.EnhancedPatternLayout
+log4j.appender.rollingFile.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1.}:%L %m%n
+log4j.appender.rollingFile.append=true
+#log4j.appender.rollingFile.Threshold=debug
