--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ch.cern</groupId>
 	<artifactId>DAQExpert</artifactId>
-	<version>2.17.0</version>
+	<version>2.17.1</version>
 
 	<name>DAQExpert</name>
 
@@ -53,6 +53,12 @@
 			<groupId>ch.cern</groupId>
 			<artifactId>DAQAggregator</artifactId>
 			<version>1.19.1</version>
+			<exclusions>
+				<exclusion>
+					<groupId>javax.xml.ws</groupId>
+					<artifactId>jaxws-api</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<!-- JSP -->
