--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -14,7 +14,7 @@ log4j.category.rcms.utilities.daqaggregator.persistence.PersistenceExplorer=ERRO
 # Define the file appender
 log4j.appender.rollingFile=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.rollingFile.DatePattern='.'yyyy-MM-dd
-log4j.appender.rollingFile.File=${log-directory}/daqexpert.log
+log4j.appender.rollingFile.File=/var/log/daqexpert/daqexpert.log
 
 log4j.appender.rollingFile.layout=org.apache.log4j.EnhancedPatternLayout
 log4j.appender.rollingFile.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1.}:%L %m%n
